# distill-feed

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PRD.md
src/distill_feed/: __init__.py  cache.py  cli.py  config.py  models.py  pipeline.py
src/distill_feed/extraction/: extractor.py  fetcher.py
src/distill_feed/ingestion/: feed_parser.py  selector.py  url_normalize.py
src/distill_feed/output/: markdown.py  report.py
src/distill_feed/summarization/: llm_client.py  prompts.py  schemas.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_feed_parser.py  test_fetcher.py  test_llm_client.py  test_markdown.py  test_pipeline.py  test_report.py  test_schemas.py  test_selector.py  test_url_normalize.py
tests/fixtures/: llm_response_invalid.json  llm_response_valid.json  sample_article.html  sample_atom.xml  sample_rss.xml
